<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark">

        <jp.mydns.dego.slowmovieplayer.VideoSurfaceView
            android:id="@+id/player_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <!-- Background (no video) -->
        <ImageView
            android:id="@+id/image_no_video"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_video"
            android:src="@drawable/no_video"
            android:visibility="visible" />

        <!-- Gallery -->
        <ImageView
            android:id="@+id/button_gallery"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_button_gallery"
            android:onClick="onVideoSelectButtonClicked"
            android:src="@drawable/archive_videos"
            android:visibility="visible" />

        <!-- Backward-->
        <ImageView
            android:id="@+id/button_backward"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="10dp"
            android:clickable="false"
            android:contentDescription="@string/content_button_backward"
            android:onClick="onBackwardButtonClicked"
            android:src="@drawable/backward"
            android:visibility="invisible" />

        <!-- Forward -->
        <ImageView
            android:id="@+id/button_forward"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="10dp"
            android:clickable="false"
            android:contentDescription="@string/content_button_forward"
            android:onClick="onForwardButtonClicked"
            android:src="@drawable/forward"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:text="@string/current_time_init"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:visibility="invisible" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:text="@string/playback_speed_init"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:visibility="invisible" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_remain_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:text="@string/remain_time_init"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bar_progress"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_control_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Speed Down -->
            <ImageView
                android:id="@+id/button_speed_down"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:contentDescription="@string/content_button_speed_down"
                android:onClick="onSpeedDownButtonClicked"
                android:src="@drawable/speed_down"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Stop -->
            <ImageView
                android:id="@+id/button_stop"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:contentDescription="@string/content_button_stop"
                android:onClick="onStopButtonClicked"
                android:src="@drawable/stop"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1" />

            <!-- Play/Pause -->
            <ImageView
                android:id="@+id/button_play"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:contentDescription="@string/content_button_play"
                android:onClick="onPlayButtonClicked"
                android:src="@drawable/play"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Speed Up -->
            <ImageView
                android:id="@+id/button_speed_up"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:contentDescription="@string/content_button_speed_up"
                android:onClick="onSpeedUpButtonClicked"
                android:src="@drawable/speed_up"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>